--- a/home/toc.html
+++ b/home/toc.html
@@ -180,6 +180,9 @@
                           <a href="techguides/factories.html" name="" title="Manage Factories">Manage Factories</a>
                         </li>
                         <li>
+                          <a href="techguides/factory-migration.html" name="" title="Manage Factory Migrations">Manage Factory Migrations</a>
+                        </li>
+                        <li>
                           <a href="techguides/stage-testcases.html" name="" title="Manage Test Cases Upload">Manage Test Cases Upload</a>
                         </li>
                         <li>
