--- a/docfx_project/site/home/techguides/environment-basic-operations.html
+++ b/docfx_project/site/home/techguides/environment-basic-operations.html
@@ -99,8 +99,9 @@
 </ul>
 <p><br></p>
 <ul>
-<li><strong>Refreshing</strong> the page - use this button to refresh any action in progress (related to an environment but also to a factory)
-<img src="images/button-refresh.png" alt="start"> </li>
+<li><p><strong>Refresh</strong> the page - use this button to refresh any action in progress (related to an environment but also to a factory)</p>
+<p><img src="images/button-refresh.png" alt="start"> </p>
+</li>
 </ul>
 <p><br></p>
 <ul>
@@ -215,6 +216,25 @@
 </ul>
 <p>The user can either start or stop all environments on certain dates, days or at a certain hour (UTC time zone). 
 <img src="images/environment-schedule.png" alt="deploy"></p>
+<h1 id="user-permissions-required">User Permissions Required</h1>
+<p>To be able to perform basic  environment operations the below permissions need to be enabled for your user:</p>
+<ul>
+<li>MANAGE _ ENVIRONMENTS</li>
+<li>CREATE _ ENVIRONMENT</li>
+<li>UPDATE _ ENVIRONMENT</li>
+<li>DELETE _ ENVIRONMENT</li>
+<li>BOOST _ ENVIRONMENT</li>
+<li>REDEPLOY _ ENVIRONMENT</li>
+<li>START _ ENVIRONMENT</li>
+<li>STOP _ ENVIRONMENT</li>
+<li>ALLOW -  EXPORT  - ENVIRONMENT</li>
+<li>START -  ALL  - ENVIRONMENT</li>
+<li>STOP -  ALL  - ENVIRONMENT</li>
+<li>SCHEDULE _ ENVIRONMENT</li>
+<li>ALLOW - EXPORT - ENVIRONMENT</li>
+<li>MANAGE _ ENVIRONMENTS</li>
+</ul>
+<p>To understand what which of the permission does, hover the cursor over the variables and a short description will pop up or click <a href="http://documentation.temenos.cloud/home/techguides/user-permissions">here</a> to get an overview of the permissions.</p>
 <p><br></p>
               <hr>
               
