--- a/docfx_project/site/home/create-dev-env-video.html
+++ b/docfx_project/site/home/create-dev-env-video.html
@@ -82,12 +82,12 @@
 
 <html>
  <body>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/ENrcuKLR0E4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/h5XyQNKvOVI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
  </body>
 </html>
 
 <p><br></p>
-<p><span style="color:#005294"><strong>Total video time</strong></span>: <strong>9:54 minutes</strong>
+<p><span style="color:#005294"><strong>Total video time</strong></span>: <strong>10:52 minutes</strong>
 <br>
 <span style="color:#005294"><strong>Total demo time</strong></span>: <strong>~ 20 minutes</strong> (from which <strong>~ 15 minutes</strong> the creation of the environment)</p>
 <p><span style="color:#005294"><strong>INFO</strong></span>:
@@ -100,8 +100,6 @@
 <li>Check <span style="color:#005294"><strong>Monitor Application</strong></span> endpoint
 <br></li>
 <li>Check <span style="color:#005294"><strong>Go to Application</strong></span> endpoint to open a T24 instance
-<br></li>
-<li>Generate an <span style="color:#005294"><strong>SSH key</strong></span> and attach it to a <span style="color:#005294"><strong>user</strong></span> on the portal
 <br></li>
 <li><span style="color:#005294"><strong>Clone</strong></span> a repository using Tortoise Git
 <br></li>
