--- a/docfx_project/site/home/techguides/factories.html
+++ b/docfx_project/site/home/techguides/factories.html
@@ -95,23 +95,17 @@
 <p><em><span style="background-color: #f4f1ef;color: DarkBlue;"><b>Stages</b></span></em> &nbsp;</p>
 <p>a. From stage (Which stage to get the principle components from) – <strong>Source stage</strong> (The stage from which pre-tested stable components can be picked up).</p>
 <p>b. <strong>Source Stage</strong> – The stage from which the “Other Products” <em>(Base Products)</em> components are fetched. This stage represents a stable version of components that is pre-tested from the perspective of the current factory.</p>
-<p>c. <strong>Target Stage</strong> - The stage to which components are promoted if the assembly successfully tests the list of components</p>
 <p><br></p>
 <p><em><span style="background-color: #f4f1ef;color: DarkBlue;"><b>Templates</b></span></em> &nbsp;</p>
 <p>a. <strong>Environment Template</strong> - holds the details of the template that is to be used to deploy the components selected by the factory</p>
 <p>b. <strong>Test Template</strong> – specifies the template that is required to deploy a test environment that holds the testing framework and test scripts. This is needed to generalize the test tools as a template.</p>
 <p><br></p>
-<p><em><span style="background-color: #f4f1ef;color: DarkBlue;"><b>WebHooks</b></span></em> &nbsp;</p>
-<p>a. <strong>Success Webhook</strong> – This is just a simple callback mechanism that can be utilized by the owner of a factory to callback another API if the factory successfully runs.</p>
-<p>b. <strong>Failure Webhook</strong> – Same as Success Webhooks. But are called when the factory fails.</p>
 <h2 id="validations">Validations</h2>
 <ol>
 <li><p>The list of selected products cannot contain components that are not understood by the selected Environment Template. </p>
 <p> a. The list of components contained in the principle and other products needs to match a bare minimum of all mandatory components specified in the template.</p>
 <p> b. The list of components can possibly have more than one component of the same type if the template allows more than one count of the same type.</p>
 <p> c. The list of components cannot contain a component type that is unknown to the Template.</p>
-</li>
-<li><p>Webhooks – The webhooks need to be valid URLs and can only get called with GET method.</p>
 </li>
 <li><p>Templates – The selection of templates are restricted based on the type of the template and a selection list is already confined to allocated and valid templates.</p>
 </li>
@@ -125,40 +119,78 @@
 <ul>
 <li>Click on Settings button on the main menu on the left.</li>
 <li>Make sure you select first the <strong>Stream</strong> and <strong>Stage</strong> (this is the stage where components are promoted) where you want to create a factory and then click <strong>New Factory</strong> button on the top-right.</li>
-<li>Fill the required fields (see all definitions above and also below example). All fields are mandatory except the last three <em>(Base Products, Success Webhook and Failure Webhook)</em>. <ul>
-<li><strong>Name</strong>: choose a meaningful name for your factory.</li>
-<li><strong>Description</strong>: put a description that will help knowing what the factory is about.</li>
-<li><strong>Templates</strong>: choose an Environment Template from the dropdown list. Based on this template will be created the environments where you will be able to test different products.</li>
-<li><strong>Test Environment Template</strong>: this is a defaulted test tool available on the Platform in order to be able to run your tests on the Platform interface. Based on the Environment release you should choose the related Test Template.</li>
-<li><strong>Source Stage</strong>: this is the stage with the stable version of components. </li>
-<li><strong>Base Stage</strong>: this is the stage with the constituent components. When testing the first time, you can choose the same stage for source and base to make sure everything is promoted successfully.</li>
-<li>Principle Products - these are promoted to the next stage and belong under Source Stage.</li>
-<li>Base Products - these are products that don’t need to be promoted but they are required to test the Principle Products and they belong under the Base Stage.</li>
+<li>Fill the required fields (see all definitions above and also below example):
+<b>
+<br></b></li>
+</ul>
+<h4 id="factory-details">Factory Details</h4>
+<ul>
+<li><strong>Factory Name</strong>: choose a meaningful name for your factory.</li>
+<li><strong>Factory Description</strong>: insert a description that will help knowing what the factory is about.
+<img src="images/factory-details.png" alt="factory-details"></li>
+</ul>
+<h4 id="product-configuration">Product Configuration</h4>
+<p>This tab represents the test configuration that holds the template, the products and the source stage that are pre-tested from the perspective of the current factory.</p>
+<ul>
+<li><strong>Template</strong>: choose an Environment Template from the dropdown list. Based on this template  the environments will be created where you will be able to test different products</li>
+<li><strong>Select Principle Products</strong>: following a successful run, the principle products are promoted to the next stage (the configured one)</li>
+<li><strong>Source Stage</strong>: this is the stage with the stable version of components</li>
+<li><strong>Select Other Products</strong>: you can select more products that are required to test the Principle products</li>
+<li>click <strong>Next</strong>
+<img src="images/factory-product-configuration.png" alt="factory-product-configuration"> </li>
+</ul>
+<h4 id="test-configuration">Test Configuration</h4>
+<p>The Test Configuration consists in in-build service tasks and is used to  trigger tests for a given factory-run, trigger export of application logs.</p>
+<ul>
+<li><p><strong>Select Workflow</strong>: a drop-down list with factory workflows added by the Temenos team. In the future users will be able to create their own workflows. As of now, there is one default workflow that is assigned to the users. By request, the Temenos Cloud and DevOps team can provide 3 additional workflows (COB Workflow, Full Workflow and Two Steps without COB Workflow). Depending on the user&#39;s workflow, additional configuration steps may need to be followed. Below is an example of how the Full Workflow should be configured:</p>
+<ul>
+<li><strong>Step 1</strong>: select the test template, component, the number of VMs needed, the test stage and tick if the workflow should stop in case of failure. At the end of this step, when the first round of tests has been finished, the test VM will be deleted, but it will not stop the T24 environment (this will be done at the end of the workflow)</li>
+<li><strong>Step 2</strong>: type in the ID of the TSA.SERVICE record for which COB has to be run. The id can be either group specific id (eg: COB-1, COB-001) , company specific id (eg: COB-GB0010001) or COB </li>
+<li><strong>Step 3</strong>:  insert the template, component, the number of VMs needed and the test stage  where you would like to test the components
+<br>
+</br></li>
 </ul>
 </li>
-<li>Click <strong>Create</strong> button &gt; the factory is successfully created. </li>
+<li><p><strong>Workflow steps</strong>: a sample which displays the steps (in that exact sequence) that are executed by the selected workflow
+<img src="images/factory-test-configuration.png" alt="factory-test-configuration"></p>
+</li>
 </ul>
-<p><img src="images/factory-create.png" alt=""></p>
-<h2 id="edit-a-factory">Edit a Factory</h2>
-<ul>
-<li>Click the <strong>Edit</strong> button.</li>
-<li>Any field can be changed/ edited as long as the entire Factory configuration complies with the validation rules.</li>
-<li>Click the <strong>Update</strong> button.</li>
-</ul>
-<h2 id="delete-a-factory">Delete a Factory</h2>
-<ul>
-<li>You can easily delete a factory by clicking the <strong>delete</strong> button.</li>
-<li>The products, stages and streams created before can be re-used.</li>
-</ul>
-<h2 id="factory-scheduler">Factory Scheduler</h2>
-<p>A user has the privilege to configure the schedule of the factory run in order to automatically run the tests and have the results available daily.</p>
+<h4 id="promotion-configuration">Promotion Configuration</h4>
+<p>This configuration enables the user to select all the required principle products along with the target stage to which they will be promoted after a successful factory run. In addition, the user can select the Test Components along with the target stage if they need promotion as well. 
+<img src="images/factory-promotion-configuration.png" alt="factory-promotion-configuration"></p>
+<h4 id="factory-scheduler">Factory Scheduler</h4>
+<p>A user has the privilege to configure the schedule of the factory run in order to automatically run the tests and have the results available daily</p>
 <ul>
 <li>the scheduler can be configured to run one time per day</li>
 <li>if the factory run test is successful you can choose to stop/ or keep running the T24 environment</li>
 <li>the same applies for the Factory Run Failure scenario
-The &#39;Stop Environment&#39; and &#39;Keep Running Environment&#39; options are aimed to be used for costs purposes.
-<img src="images/factory-scheduler.png" alt=""></li>
+The &#39;Stop Environment&#39; and &#39;Keep Running Environment&#39; options are aimed to be used for costs purposes
+<img src="images/factory-scheduler.png" alt="factory-scheduler"></li>
 </ul>
+<h2 id="edit-a-factory">Edit a Factory</h2>
+<ul>
+<li>Click the <strong>Edit</strong> button</li>
+<li>Any field can be changed/ edited as long as the entire Factory configuration complies with the validation rules</li>
+<li>Click the <strong>Update</strong> button</li>
+</ul>
+<h2 id="delete-a-factory">Delete a Factory</h2>
+<ul>
+<li>You can easily delete a factory by clicking the <strong>delete</strong> button</li>
+<li>The products, stages and streams created before can be re-used.</li>
+</ul>
+<p><img src="images/factory-edit-delete.png" alt="factory-scheduler"></p>
+<h1 id="user-permissions-required">User Permissions Required</h1>
+<p>To be able to perform the above operations the following permissions need to be enabled for your user:</p>
+<ul>
+<li>MANAGE _ COMPONENTS</li>
+<li>MANAGE _ STREAMS</li>
+<li>MANAGE _ STAGES</li>
+<li>MANAGE _ PRODUCTS</li>
+<li>CREATE _ FACTORY</li>
+<li>UPDATE _ FACTORY</li>
+<li>DELETE _ FACTORY</li>
+</ul>
+<p>To understand what which of the permission does, hover the cursor over the variables and a short description will pop up or click <a href="http://documentation.temenos.cloud/home/techguides/user-permissions">here</a> to get an overview of the permissions.</p>
 <p><br></p>
               <hr>
               
