--- a/docfx_project/site/home/techguides/fcm-configuration.html
+++ b/docfx_project/site/home/techguides/fcm-configuration.html
@@ -192,6 +192,18 @@ When disconnecting and re-connecting to the server, the <strong>input</strong> f
 </ul>
 <p><img src="images/fcm-check-messages.png" alt="check messages"> </p>
 <p><br></p>
+<h1 id="user-permissions-required">User Permissions Required</h1>
+<p>To be able to perform the above operations the below permissions need to be enabled for your user:</p>
+<ul>
+<li>CREATE _ USER</li>
+<li>MANAGE _ USERS</li>
+<li>CREATE _ ENVIRONMENT</li>
+<li>UPDATE _ ENVIRONMENT</li>
+<li>REDEPLOY _ ENVIRONMENT</li>
+<li>MANAGE _ ENVIRONMENTS </li>
+</ul>
+<p>To understand what which of the permission does, hover the cursor over the variables and a short description will pop up or click <a href="http://documentation.temenos.cloud/home/techguides/user-permissions">here</a> to get an overview of the permissions.</p>
+<p><br></p>
               <hr>
               
               <div id="disqus_thread"></div>
