--- a/home/overview.html
+++ b/home/overview.html
@@ -81,7 +81,7 @@
             <article class="content wrap" id="_content" data-uid="">
 <h2 id="what-is-temenos-continuous-deployment"><strong>What is Temenos Continuous Deployment?</strong></h2>
 
-<p>Temenos Continuous Deployment (TCD) is an offering from Temenos SaaS that provides client individuals and teams with the ability to manage, configure and assemble client licensed Temenos Software – either fully deployed and supported by Temenos SaaS or utilising the client’s own cloud infrastructure. </p>
+<p>Temenos Continuous Deployment (TCD) is an offering from Temenos SaaS that provides client individuals and teams with the ability to manage, configure and assemble client licensed Temenos Software.</p>
 <p>Temenos Continuous Deployment enables you to create Environments, i.e. Temenos Suites on-demand, for non-production use in the cloud. The speed, reliability, and agility of these environments will instantly add value to your implementation and scale your project delivery capacity. </p>
 <p><img src="images/cloud-offering.png" alt=""></p>
 <h2 id="temenos-continuous-deployment"><strong>Temenos Continuous Deployment</strong></h2>
@@ -91,7 +91,7 @@
 <p>“Assemble” module provides a DevOps solution to perform continuous integration and delivery of Temenos Products, its customisation and thereby enabling faster time to market. </p>
 <p>The Assemble service module can accelerate the pace of change and increase confidence in the software deliveries by managing the Assemble of Components (updates, main release, and Level 3 developments), the provisioning into testing Environments, the execution of tests scripts, and providing detailed dashboards of the results. This Assemble service module further allows the Client to configure Products and Releases, which match their own specific needs. The main objective being to streamline ongoing change and accelerate implementation / upgrade projects. </p>
 <h2 id="what-is-the-extend-service-module-of-the-temenos-continuous-deployment"><strong>What is the “Extend” service module of the Temenos Continuous Deployment?</strong></h2>
-<p>The Extend module of the Temenos Continuous Deployment is used by the ‘change the bank’ teams for self-service management of Environments and provides access to the tools for enhancing Temenos solutions. The TCD portal enables authorised users to provision Environments from a list of Templates. These Environments are for non-production use during development, test, integration, implementation phases. </p>
+<p>The Extend module of the Temenos Continuous Deployment is used by the ‘change the bank’ teams for self-service management of Environments and provides access to the tools for enhancing Temenos solutions. The portal enables authorised users to provision Environments from a list of Templates. These Environments are for non-production use during development, test, integration, implementation phases. </p>
 <h2 id="features"><strong>Features</strong></h2>
 <hr>
 <p><strong>Self-service environment provisioning</strong></p>
