--- a/home/techguides/selenium-template.html
+++ b/home/techguides/selenium-template.html
@@ -330,7 +330,8 @@ The test framework should generate the manifest.xml file with the above details.
 &lt;result&gt;FAIL&lt;/result&gt;
 &lt;hostName&gt;&lt;/hostName&gt;
 &lt;/Manifest&gt;
-</code></pre><p><br></p>
+</code></pre><p>By clicking on <a href="selenium-automation" download=""><strong>THIS</strong></a> link you can download a sample Selenium Test framework which is capable of running sample UI based tests.</p>
+<p><br></p>
               <hr>
               
               <div id="disqus_thread"></div>
