--- a/home/techguides/selenium-template.html
+++ b/home/techguides/selenium-template.html
@@ -330,7 +330,8 @@ The test framework should generate the manifest.xml file with the above details.
 &lt;result&gt;FAIL&lt;/result&gt;
 &lt;hostName&gt;&lt;/hostName&gt;
 &lt;/Manifest&gt;
-</code></pre><p>By clicking <a href="zip/selenium-automation.zip" download="selenium-automation.zip">here</a> you will be able to download a sample of the Selenium Test framework, which is capable of running sample UI based tests. </p>
+</code></pre><p>By clicking </p>
+<p><a href="D:\DocumentationPortal\temenos-platform-documentation\docfx_project\home\zip" download="selenium-automation.zip">here</a></p>
 <p><br></p>
               <hr>
               
