--- a/home/techguides/selenium-template.html
+++ b/home/techguides/selenium-template.html
@@ -330,7 +330,7 @@ The test framework should generate the manifest.xml file with the above details.
 &lt;result&gt;FAIL&lt;/result&gt;
 &lt;hostName&gt;&lt;/hostName&gt;
 &lt;/Manifest&gt;
-</code></pre><p>By clicking <a href="./../zip/selenium-automation.zip">HERE</a>  you can download the sample of the Selenium Test framework, which is capable of running sample UI based tests.</p>
+</code></pre><p>By clicking <a href="../zip/selenium-automation.zip">HERE</a>  you can download the sample of the Selenium Test framework, which is capable of running sample UI based tests.</p>
 <p><br></p>
               <hr>
               
