--- a/home/techguides/components-products.html
+++ b/home/techguides/components-products.html
@@ -253,8 +253,7 @@ curl -H &quot;X-JFrog-Art-Api:AKCp5dKYyM9WMoiacim9yedAZfG6gLwwcYugPmzZhqHkdRe6ex
 <p>d) Any other IN and OUT message directories used for interfaces</p>
 <p>e) User directories or BPs created by developers and the local source code in them for testing purposes</p>
 <h1 id="wealth-suite-golden--copy-pre-requisites">Wealth suite golden  copy pre-requisites</h1>
-<p>All the wealth templates have the ability to deploy the following components:</p>
-<p><img src="images/components-list.png" alt=""></p>
+<p>All the wealth templates have the ability to deploy the components from <a href="http://documentation.temenos.cloud/home/pdf/wealth-components-list.pdf " target="_blank"><u><strong>THIS</strong></u></a> document. Below you can find a table with additional comments for each component as well:  </p>
 <table>
 <thead>
 <tr>
