--- a/home/techguides/components-products.html
+++ b/home/techguides/components-products.html
@@ -253,73 +253,7 @@ curl -H &quot;X-JFrog-Art-Api:AKCp5dKYyM9WMoiacim9yedAZfG6gLwwcYugPmzZhqHkdRe6ex
 <p>d) Any other IN and OUT message directories used for interfaces</p>
 <p>e) User directories or BPs created by developers and the local source code in them for testing purposes</p>
 <h1 id="wealth-suite-golden--copy-pre-requisites">Wealth suite golden  copy pre-requisites</h1>
-<p>All the wealth templates have the ability to deploy the components from <a href="http://documentation.temenos.cloud/home/pdf/wealth-components-list.pdf " target="_blank"><u><strong>THIS</strong></u></a> document. Below you can find a table with additional comments for each component as well:  </p>
-<table>
-<thead>
-<tr>
-<th>Component description</th>
-<th>Can this be client specific</th>
-<th>How to change in extend env</th>
-<th>How to change in an assemble factory</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td>Tap-core</td>
-<td>Yes</td>
-<td>Client golden copy / ISB build must be  uploaded into artifactory and the respective template manifest file (i.e. components file) updated with artifactory path</td>
-<td>The client binary should be uploaded to the appropriate stream/stage folder in the artifactory. The exact location can be found in the TCD portal components configuration page. After creating components in the TCD portal, the upload URL will be populated automatically.</td>
-</tr>
-<tr>
-<td>OCS</td>
-<td>Yes</td>
-<td>Same as above</td>
-<td>Same as above</td>
-</tr>
-<tr>
-<td>OCS-Custom</td>
-<td>Yes</td>
-<td>Same as above</td>
-<td>Same as above</td>
-</tr>
-<tr>
-<td>TTI</td>
-<td>Yes</td>
-<td>Same as above</td>
-<td>Same as above</td>
-</tr>
-<tr>
-<td>TTI -L3</td>
-<td>Yes</td>
-<td>Same as above</td>
-<td>Same as above</td>
-</tr>
-<tr>
-<td>GWPack</td>
-<td>Yes</td>
-<td>Same as above</td>
-<td>Same as above</td>
-</tr>
-<tr>
-<td>GWPack-L3</td>
-<td>Yes</td>
-<td>Same as above</td>
-<td>Same as above</td>
-</tr>
-<tr>
-<td>Tap-Wsc</td>
-<td>Yes</td>
-<td>Same as above</td>
-<td>Same as above</td>
-</tr>
-<tr>
-<td>Tap- GUI</td>
-<td>Yes</td>
-<td>Same as above</td>
-<td>Same as above</td>
-</tr>
-</tbody>
-</table>
+<p>All the wealth templates have the ability to deploy the components listed in  <a href="http://documentation.temenos.cloud/home/pdf/wealthsuite-components.pdf " target="_blank"><u><strong>THIS</strong></u></a> document. By clicking on the file you will also find a table with additional details for each component.</p>
 <h2 id="tap-core">TAP CORE</h2>
 <p>&nbsp; <strong>Database-generic</strong></p>
 <ul>
