--- a/docfx_project/site/home/techguides/components-products.html
+++ b/docfx_project/site/home/techguides/components-products.html
@@ -253,10 +253,11 @@ curl -H &quot;X-JFrog-Art-Api:AKCp5dKYyM9WMoiacim9yedAZfG6gLwwcYugPmzZhqHkdRe6ex
 <p>d) Any other IN and OUT message directories used for interfaces</p>
 <p>e) User directories or BPs created by developers and the local source code in them for testing purposes</p>
 <h1 id="wealth-suite-golden--copy-pre-requisites">Wealth suite golden  copy pre-requisites</h1>
+<p>All the wealth templates have the ability to deploy the components listed in  <a href="http://documentation.temenos.cloud/home/pdf/wealthsuite-components.pdf " target="_blank"><u><strong>THIS</strong></u></a> document. By clicking on the file you will also find a table with additional details for each component.</p>
 <h2 id="tap-core">TAP CORE</h2>
 <p>&nbsp; <strong>Database-generic</strong></p>
 <ul>
-<li><p>The golden copy of the TAP DB must be obtained  by doing an extract using the cloning tool (cloning tool version to be used should be the one delivered with Wealth distribution)</p>
+<li><p>The golden copy of the TAP DB must be obtained  by doing an extract using the cloning tool (the cloning tool version to be used should be the one delivered with Wealth distribution)</p>
 </li>
 <li><p>The golden copy of TAP database must be delivered with golden copy of TAP Core binaries (in sync)</p>
 </li>
@@ -271,24 +272,6 @@ curl -H &quot;X-JFrog-Art-Api:AKCp5dKYyM9WMoiacim9yedAZfG6gLwwcYugPmzZhqHkdRe6ex
 <li><p>Client to ensure Components L3 packages are in sync for E2E environment deployment.</p>
 </li>
 <li><p>DatabaseSybase.</p>
-</li>
-</ul>
-<h2 id="gwpack---l3">GWPACK - L3</h2>
-<ul>
-<li><p>L3 GWPACK format must suit exact format to be provided by Temenos </p>
-</li>
-<li><p>There’s no L3 extraction mechanism provided by Product at this stage. Waiting for this product feature to be delivered, client must maintain L3 development in his repository mechanism, and publish packages to be testing in TCD</p>
-</li>
-<li><p>Distribution must come as a single full distribution (i.e. any update/hotfix must be delivered in TCD platform as a full release to be requested to Distribution team</p>
-</li>
-</ul>
-<h2 id="tti--l3">TTI -L3</h2>
-<ul>
-<li><p>L3 GWPACK format must suit exact format to be provided by Temenos </p>
-</li>
-<li><p>There’s no L3 extraction mechanism provided by Product at this stage. Waiting for this product feature to be delivered, client must maintain L3 development in his repository mechanism, and publish packages to be testing in TCD</p>
-</li>
-<li><p>Distribution must come as a single full distribution (i.e. any update/hotfix must be delivered in TCD platform as a full release to be requested to Distribution team</p>
 </li>
 </ul>
 <h2 id="tap-web">TAP Web</h2>
