--- a/home/techguides/stage-testcases.html
+++ b/home/techguides/stage-testcases.html
@@ -81,6 +81,8 @@
             <article class="content wrap" id="_content" data-uid="">
 <h1 id="upload-and-delete-test-cases">Upload and Delete Test Cases</h1>
 
+<blockquote><p><strong>Note: Due to the latest Temenos Continuous Deployment platform upgrades this page will shortly be removed from the documentation portal. You should refer to the <a href="http://documentation.temenos.cloud/home/techguides/factory-migration.html">Factory Migration</a> instructions instead.</strong></p>
+</blockquote>
 <h2 id="upload-test-cases">Upload Test Cases</h2>
 <p>For any new created stage, there is automatically created into the Artifactory a <strong>TestCase</strong> folder where the tests can be manually uploaded.</p>
 <p>After connecting to JFrog Artifactory, you should first identify your stage (based on the name that you gave on the platform). The TestCases folder appears in the repository under the created stage just after the added components as in the example below:</p>
