--- a/home/techguides/manage-environments.html
+++ b/home/techguides/manage-environments.html
@@ -110,8 +110,8 @@ All fields are mandatory except &#39;Labels&#39;.</li>
 </ul>
 <p><img src="images/env-new.png" alt=""></p>
 <p><br></p>
-<div class="NOTE"><h5>Note</h5><p>The environment creation may take around 20 minutes or more, depending on the selected template.</p>
-</div>
+<p> To see the details of an environment please make sure to first select it from the top-right-side menu:
+<img src="images/environment-see-details.png" alt=""></p>
 <ul>
 <li><strong>Templates</strong></li>
 </ul>
@@ -125,7 +125,7 @@ All fields are mandatory except &#39;Labels&#39;.</li>
 <li>CREATE _ ENVIRONMENT</li>
 <li>MANAGE _ ENVIRONMENTS</li>
 </ul>
-<p>To understand what which of the permission does, hover the cursor over the variables and a short description will pop up or click <a href="http://documentation.temenos.cloud/home/techguides/user-permissions">here</a> to get an overview of the permissions.</p>
+<p>To understand what each of the permission does, hover the cursor over the variables and a short description will pop up or click <a href="http://documentation.temenos.cloud/home/techguides/user-permissions">here</a> to get an overview of the permissions.</p>
 <p><br></p>
               <hr>
               
