--- a/home/techguides/release-info-2020.html
+++ b/home/techguides/release-info-2020.html
@@ -82,10 +82,33 @@
 <h2 id="release-notes">Release Notes</h2>
 
 <p>This page provides information about the monthly Temenos Continuous Deployment Platform features and improvements in each release.</p>
+<h1 id="202005-release-notes"><strong>2020.05 Release Notes</strong></h1>
+<p><strong>InfraBuild</strong>: 362 &nbsp;| <strong>PortalTag</strong>: cloudPortal_1.79e &nbsp; |  <strong>ControllerBuild</strong>: 26</p>
+<h2 id="technical-enhancements">Technical enhancements</h2>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;<strong>1. The STOP environments button displays an error after rebuild</strong></p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- <strong>START</strong> and <strong>STOP</strong> environments are handled differently to provide faster feedback to the user
+<br>
+</br>
+&nbsp;&nbsp;&nbsp;&nbsp;<strong>2. Isuse on the user accounts page - the &quot;EDITING&quot; status is not displayed in the portal</strong></p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - user experience improvements have been added on the Users Page in the portal</p>
+<h2 id="factory-run-enhancements">Factory Run enhancements</h2>
+<p>&nbsp;&nbsp;&nbsp;&nbsp; The <strong>Factory Run</strong> functionality is now enhanced with the ability to run tests with multiple steps (workflows), in a designated sequence. Factory configuration screen layout was changed and split into 4 parts:</p>
+<ul>
+<li>Factory Definition and Products</li>
+<li>Test Configuration</li>
+<li>Promotion Configuration</li>
+<li>Factory Schedule</li>
+</ul>
+<p>Check the  <a href="http://documentation.temenos.cloud/home/techguides/factories.html" title="page"><strong>Manage Factories</strong></a> documentation to see the latest updates.</p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp; The <strong>Test script</strong> is now a component and is promoted from one stage to another. With this release, all the factories need reconfiguration to include the test script component, otherwise the factory run will not be successful. Learn how to configure the Test Script component <a href="http://documentation.temenos.cloud/home/techguides/factory-migration.html" title="page"><strong>here</strong></a>.</p>
+<h2 id="platform-security-enhancements">Platform security enhancements</h2>
+<p>&nbsp;&nbsp;&nbsp;&nbsp; Security improvements made to minimize potential attacks. </p>
+<h2 id="user-experience-improvements">User experience improvements</h2>
+<p>&nbsp;&nbsp;&nbsp;&nbsp; User selection is mandatory to display details. .</p>
 <h1 id="202002-release-notes"><strong>2020.02 Release Notes</strong></h1>
 <p><strong>InfraBuild</strong>: 362 &nbsp;<strong>|</strong>&nbsp; <strong>PortalTag</strong>: cloudPortal_1.79e
 &nbsp;<strong>|</strong>&nbsp; <strong>ControllerBuild</strong>: 26</p>
-<h2 id="technical-enhancements">Technical Enhancements</h2>
+<h2 id="technical-enhancements">Technical enhancements</h2>
 <p>&nbsp;&nbsp;&nbsp;&nbsp;<strong>1. Exception list added to the Organisation scheduled shutdown</strong></p>
 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- users with the &quot;UPDATE_ENVIRONMENT&quot; privilege are able to add an &quot;scheduler ignore&quot; for environments. Those environments will not be STOPPED or STARTED by time scheduler <br>
  </br></p>
@@ -102,7 +125,7 @@
 </br></p>
 <h1 id="202001-release-notes"><strong>2020.01 Release Notes</strong></h1>
 <p><strong>InfraBuild</strong>: 355 &nbsp; <strong>|</strong>  &nbsp;<strong>PortalTag</strong>: cloudPortal_1.78 &nbsp;<strong>|</strong>  &nbsp;<strong>ControllerBuild</strong>: 12</p>
-<h2 id="dashboard-enhancements">Dashboard Enhancements</h2>
+<h2 id="dashboard-enhancements">Dashboard enhancements</h2>
 <p>&nbsp;&nbsp;&nbsp;&nbsp;<strong>1. UI Updates</strong></p>
 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- Temenos Continuous Deployment Platform UI has been updated to unify look and feel, behavior, and to improve user experience. The UI changes have been updated on all pages across the documentation portal<br>
 </br></p>
