--- a/home/techguides/user-creation-in-paas.html
+++ b/home/techguides/user-creation-in-paas.html
@@ -156,6 +156,8 @@ See further below how to generate the SSH key</p>
 </li>
 </ul>
 <p><br></p>
+<p> To see the details of a user please make sure to first select the user from the left-side users list:
+<img src="images/user-see-details.png" alt=""></p>
 <h1 id="user-permissions-required">User Permissions Required</h1>
 <p>To be able to create a user the below permission needs to be enabled for your user:</p>
 <ul>
