--- a/home/techguides/t24-development.html
+++ b/home/techguides/t24-development.html
@@ -118,7 +118,7 @@
 <li>REDEPLOY _ ENVIRONMENT</li>
 <li>MANAGE _ ENVIRONMENTS </li>
 </ul>
-<p>To understand what which of the permission does, hover the cursor over the variables and a short description will pop up or click <a href="http://documentation.temenos.cloud/home/techguides/user-permissions">here</a> to get an overview of the permissions.</p>
+<p>To understand what each of the permission does, hover the cursor over the variables and a short description will pop up or click <a href="http://documentation.temenos.cloud/home/techguides/user-permissions">here</a> to get an overview of the permissions.</p>
 <p><br></p>
               <hr>
               
