--- a/home/clone-environment-video.html
+++ b/home/clone-environment-video.html
@@ -86,7 +86,7 @@
 <p><br></p>
 <p><span style="color:#005294"><strong>Total video time</strong></span>: <strong>3:32 minutes</strong>
 <br>
-<span style="color:#005294"><strong>Total demo time</strong></span>: <strong>~ 20 minutes</strong> (from which <strong>15 minutes</strong> the cloning of the environment)</p>
+<span style="color:#005294"><strong>Total demo time</strong></span>: <strong>~ 20 minutes</strong> (the time depends on how long it takes to clone of the environment)</p>
 <p><span style="color:#005294"><strong>INFO</strong></span>:
 <br></p>
 <ul>
