--- a/home/user-creation-in-paas.html
+++ b/home/user-creation-in-paas.html
@@ -108,7 +108,7 @@
 <li>click &#39;Edit&#39; on the user</li>
 <li>choose from the drop-down list the role that needs to be assigned </li>
 </ul>
-<p>To understand what which of the permission does, hover the cursor over the variables and a short description will pop up or click <strong><a href="http://documentation.temenos.cloud/home/techguides/user-permissions">here</a></strong> to get an overview of the permissions.</p>
+<p>To understand what each of the permission does, hover the cursor over the variables and a short description will pop up or click <strong><a href="http://documentation.temenos.cloud/home/techguides/user-permissions">here</a></strong> to get an overview of the permissions.</p>
 <h1 id="how-to-use-putty-ssh-client-for-ssh-key-generation">How to use PuTTY SSH client for SSH key generation.</h1>
 <p>Should the users requires access to the source code repository they need to provide their public SSH Keys on the user profile section to gain access.</p>
 <ul>
