--- a/home/access-ud-directories-video.html
+++ b/home/access-ud-directories-video.html
@@ -89,7 +89,7 @@
 <p><br></p>
 <p><span style="color:#005294"><strong>Total video time</strong></span>: <strong>7:28 minutes</strong>
 <br>
-<span style="color:#005294"><strong>Total demo time</strong></span>: <strong>~ 20 minutes</strong> (from which <strong>15 minutes</strong> the cloning of the environment)</p>
+<span style="color:#005294"><strong>Total demo time</strong></span>: <strong>~ 20 minutes</strong> (depending on the time used to clone the environment)</p>
 <p><span style="color:#005294"><strong>INFO</strong></span>:
 <br></p>
 <ul>
