--- a/home/manage-environments.html
+++ b/home/manage-environments.html
@@ -110,7 +110,7 @@ All fields are mandatory except &#39;Labels&#39;.</li>
 </ul>
 <p><img src="images/env-new.png" alt=""></p>
 <p><br></p>
-<div class="NOTE"><h5>Note</h5><p>The environment creation may take around 20 minutes or more, depending on the selected template.</p>
+<div class="NOTE"><h5>Note</h5><p>The environment creation time will vary depending on the selected template.</p>
 </div>
 <ul>
 <li><strong>Templates</strong></li>
