--- a/home/techguides/factories.html
+++ b/home/techguides/factories.html
@@ -187,7 +187,7 @@ The &#39;Stop Environment&#39; and &#39;Keep Running Environment&#39; options ar
 <li>UPDATE _ FACTORY</li>
 <li>DELETE _ FACTORY</li>
 </ul>
-<p>To understand what each of the permission does, hover the cursor over the variables and a short description will pop up or click <a href="http://documentation.temenos.cloud/home/techguides/user-permissions">here</a> to get an overview of the permissions.</p>
+<p>To have a better understanding of the user permissions, hover the cursor over the variables and a short description will pop up or click <a href="http://documentation.temenos.cloud/home/techguides/user-permissions">here</a> to read more.</p>
 <p><br></p>
               <hr>
               
