--- a/home/techguides/stream.html
+++ b/home/techguides/stream.html
@@ -156,7 +156,7 @@ The parts of the stream are listed below:</p>
 <li>DELETE _ STREAM</li>
 <li>CLONE _ STREAM</li>
 </ul>
-<p>To understand what each of the permission does, hover the cursor over the variables and a short description will pop up or click <a href="http://documentation.temenos.cloud/home/techguides/user-permissions">here</a> to get an overview of the permissions.</p>
+<p>To have a better understanding of the user permissions, hover the cursor over the variables and a short description will pop up or click <a href="http://documentation.temenos.cloud/home/techguides/user-permissions">here</a> to read more.</p>
 <p><br></p>
               <hr>
               
