--- a/home/techguides/access-fcm-ud-directories.html
+++ b/home/techguides/access-fcm-ud-directories.html
@@ -202,7 +202,7 @@ during the environment creation time the  customer can also upload the FCM-Golde
 <li>CREATE _ ENVIRONMENT</li>
 <li>MANAGE _ ENVIRONMENTS</li>
 </ul>
-<p>To understand what which of the permission does, hover the cursor over the variables and a short description will pop up or click <a href="http://documentation.temenos.cloud/home/techguides/user-permissions">here</a> to get an overview of the permissions.</p>
+<p>To have a better understanding of the user permissions, hover the cursor over the variables and a short description will pop up or click <a href="http://documentation.temenos.cloud/home/techguides/user-permissions">here</a> to read more.</p>
 <p><br></p>
               <hr>
               
