--- a/home/techguides/create-publish-template.html
+++ b/home/techguides/create-publish-template.html
@@ -122,7 +122,7 @@
 <li>VIEW  -  FACTORY  -  RUN  _  HISTORY</li>
 <li>ALLOW  -  CUSTOM  -  TEMPLATES</li>
 </ul>
-<p>To understand what which of the permission does, hover the cursor over the variables and a short description will pop up or click <a href="http://documentation.temenos.cloud/home/techguides/user-permissions">here</a> to get an overview of the permissions.</p>
+<p>To have a better understanding of the user permissions, hover the cursor over the variables and a short description will pop up or click <a href="http://documentation.temenos.cloud/home/techguides/user-permissions">here</a> to read more.</p>
 <p><br></p>
               <hr>
               
