--- a/home/techguides/manage-environments.html
+++ b/home/techguides/manage-environments.html
@@ -125,7 +125,7 @@ All fields are mandatory except &#39;Labels&#39;.</li>
 <li>CREATE _ ENVIRONMENT</li>
 <li>MANAGE _ ENVIRONMENTS</li>
 </ul>
-<p>To understand what each of the permission does, hover the cursor over the variables and a short description will pop up or click <a href="http://documentation.temenos.cloud/home/techguides/user-permissions">here</a> to get an overview of the permissions.</p>
+<p>To have a better understanding of the user permissions, hover the cursor over the variables and a short description will pop up or click <a href="http://documentation.temenos.cloud/home/techguides/user-permissions">here</a> to read more.</p>
 <p><br></p>
               <hr>
               
