--- a/home/techguides/run-factory.html
+++ b/home/techguides/run-factory.html
@@ -137,7 +137,7 @@
 <li>ABORT - FACTORY - RUN</li>
 <li>VIEW - FACTORY - RUN - HISTORY</li>
 </ul>
-<p>To understand what each of the permission does, hover the cursor over the variables and a short description will pop up or click <a href="http://documentation.temenos.cloud/home/techguides/user-permissions">here</a> to get an overview of the permissions.</p>
+<p>To have a better understanding of the user permissions, hover the cursor over the variables and a short description will pop up or click <a href="http://documentation.temenos.cloud/home/techguides/user-permissions">here</a> to read more.</p>
 <p><br></p>
               <hr>
               
