--- a/home/techguides/release-info-2020.html
+++ b/home/techguides/release-info-2020.html
@@ -82,7 +82,9 @@
 <h2 id="release-notes">Release Notes</h2>
 
 <p>This page provides information about the monthly Temenos Continuous Deployment Platform features and improvements in each release.</p>
-<h1 id="202005-release-notes"><strong>2020.05 Release Notes</strong></h1>
+<h1 id="202004-release-notes"><strong>2020.04 Release Notes</strong></h1>
+<p><strong>InfraBuild</strong>: 28 &nbsp;<strong>|</strong>&nbsp; <strong>PortalBuild</strong>: 1658
+&nbsp;<strong>|</strong>&nbsp; <strong>ControllerBuild</strong>: 99 &nbsp;<strong>|</strong>&nbsp;  <strong>ReleaseNumber</strong>: TCD202004.1 </p>
 <h2 id="technical-enhancements">Technical enhancements</h2>
 <p>&nbsp;&nbsp;&nbsp;&nbsp;<strong>1. The STOP environments button displays an error after rebuild</strong></p>
 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- <strong>START</strong> and <strong>STOP</strong> environments are handled differently to provide faster feedback to the user
@@ -99,7 +101,7 @@
 <li>Factory Schedule</li>
 </ul>
 <p>Check the  <a href="http://documentation.temenos.cloud/home/techguides/factories.html" title="page"><strong>Manage Factories</strong></a> documentation to see the latest updates.</p>
-<p>&nbsp;&nbsp;&nbsp;&nbsp; The <strong>Test script</strong> is now a component and is promoted from one stage to another. With this release, all the factories need reconfiguration to include the test script component, otherwise the factory run will not be successful. Learn how to configure the Test Script component <a href="http://documentation.temenos.cloud/home/techguides/factory-migration.html" title="page"><strong>here</strong></a>.</p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp; <span style="color:red"><strong>IMPORTANT</strong>:</span> the <strong>Test script</strong> is now a component and is promoted from one stage to another. With this release, all the factories need reconfiguration to include the test script component, otherwise the factory run will not be successful. Learn how to configure the Test Script component <a href="http://documentation.temenos.cloud/home/techguides/factory-migration.html" title="page"><strong>here</strong></a>.</p>
 <h2 id="platform-security-enhancements">Platform security enhancements</h2>
 <p>&nbsp;&nbsp;&nbsp;&nbsp; Security improvements made to minimize potential attacks. </p>
 <h2 id="user-experience-improvements">User experience improvements</h2>
