--- a/home/techguides/release-info-2020.html
+++ b/home/techguides/release-info-2020.html
@@ -105,7 +105,11 @@
 <h2 id="platform-security-enhancements">Platform security enhancements</h2>
 <p>&nbsp;&nbsp;&nbsp;&nbsp; Security improvements made to minimize potential attacks. </p>
 <h2 id="user-experience-improvements">User experience improvements</h2>
-<p>&nbsp;&nbsp;&nbsp;&nbsp; User selection is mandatory to display details. .</p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp; User selection is mandatory to display details. .
+<br>
+</br></p>
+<p><br>
+</br></p>
 <h1 id="202002-release-notes"><strong>2020.02 Release Notes</strong></h1>
 <p><strong>InfraBuild</strong>: 362 &nbsp;<strong>|</strong>&nbsp; <strong>PortalTag</strong>: cloudPortal_1.79e
 &nbsp;<strong>|</strong>&nbsp; <strong>ControllerBuild</strong>: 26</p>
